--- a/index.html
+++ b/index.html
@@ -82,23 +82,23 @@
                                         <table class="table table-striped">
                                             <thead>
                                               <tr>
-                                                <th scope="col">#</th>
+                                                <th scope="col"></th>
                                                 <th scope="col">ingredients</th>
-                                                <th scope="col">Mesure</th>
+                                                <th scope="col">amount</th>
                                               </tr>
                                             </thead>
                                             <tbody>
                                               <tr>
-                                                <th scope="row">1</th>
+                                                <th scope="row"></th>
                                                 <td>streaky bacon rashers</td>
                                                 <td>6 pieces</td>
                                               </tr>
                                               <tr>
-                                                <th scope="row">2</th>
+                                                <th scope="row"></th>
                                                 <td>eggs, hard-boiled</td>
                                                 <td>6</td>
                                               <tr>
-                                                <th scope="row">3</th>
+                                                <th scope="row"></th>
                                                 <td>large tomato, cut into slices</td>
                                                 <td>1</td>
                                               </tr>
@@ -121,14 +121,37 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Bread-free bacon and egg sliders</h5>
                                         <p class="card-text">An easy, quick gluten-free breakfast or snack, this 6-ingredient slider is great for kids, work, or a post-workout snack.</p>
-                                        <ul>
-                                            <li>6 streaky bacon rashers</li>
-                                            <li>6 eggs, hard-boiled</li>
-                                            <li>1 large tomato, cut into slices</li>
-                                        </ul>
+                                        <table class="table table-striped">
+                                            <thead>
+                                              <tr>
+                                                <th scope="col"></th>
+                                                <th scope="col">ingredients</th>
+                                                <th scope="col">amount</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <th scope="row"></th>
+                                                <td>streaky bacon rashers</td>
+                                                <td>6 pieces</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row"></th>
+                                                <td>eggs, hard-boiled</td>
+                                                <td>6</td>
+                                              <tr>
+                                                <th scope="row"></th>
+                                                <td>large tomato, cut into slices</td>
+                                                <td>1</td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
 
                                         <button type="button" class="btn btn-primary" style="background-color: coral; border-color: coral;">full recipe</button>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <div class="card-bottom-part">
+                                            <i onclick="shareAlert()" class="fas fa-share"></i>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -139,14 +162,37 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Bread-free bacon and egg sliders</h5>
                                         <p class="card-text">An easy, quick gluten-free breakfast or snack, this 6-ingredient slider is great for kids, work, or a post-workout snack.</p>
-                                        <ul>
-                                            <li>6 streaky bacon rashers</li>
-                                            <li>6 eggs, hard-boiled</li>
-                                            <li>1 large tomato, cut into slices</li>
-                                        </ul>
+                                        <table class="table table-striped">
+                                            <thead>
+                                              <tr>
+                                                <th scope="col"></th>
+                                                <th scope="col">ingredients</th>
+                                                <th scope="col">amount</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <th scope="row"></th>
+                                                <td>streaky bacon rashers</td>
+                                                <td>6 pieces</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row"></th>
+                                                <td>eggs, hard-boiled</td>
+                                                <td>6</td>
+                                              <tr>
+                                                <th scope="row"></th>
+                                                <td>large tomato, cut into slices</td>
+                                                <td>1</td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
 
                                         <button type="button" class="btn btn-primary" style="background-color: coral; border-color: coral;">full recipe</button>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <div class="card-bottom-part">
+                                            <i onclick="shareAlert()" class="fas fa-share"></i>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
